Keep Clan-War inventory tests Java 8 compatible